# Research-OS

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  fix_example.py  fix_templates.py  fix_test.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: codeql.yml  publish.yml  release.yml  stress.yml  test.yml
.research/: config.yaml
.research/schemas/: __init__.py  analysis_schema.py  research_map_schema.py  state_schema.py
.stress_findings/: 06_context_adherence.md
assets/: logo.txt
docs/: ADAPTERS.md  AI_GUIDE.md  ARCHITECTURE.md  AUDIT_v1.9.2.md  BEST_SETUP.md  CHANGELOG_DETAILED_v1.9.3.md  CHEATSHEET.md  CLI.md  CONTRACT.md  DAEMON.md  DAEMON_BRIDGE.md  DEEP_PLANNING.md  FAQ.md  FIRST_HOUR.md  GLOSSARY.md  GUIDE.md  HOW_IT_WORKS.md  HYBRID_ARCHITECTURE.md  INTEGRATION.md  MAINTAINER_GUIDE.md  MIGRATION.md  MIGRATION_v1_to_v2.md  MIGRATION_v2_0_to_v2_1.md  NOTIFICATION_SPINE.md  PAPER_PIPELINE.md  PLUGIN_AUTHORING.md  PRECONDITION_GATE.md  PROJECT_LAYOUT.md  PROMPTING.md  PROTOCOLS.md  PROTOCOL_DOCTRINE.md  PROTOCOL_GRAPH.mermaid  QUICKSTART.md  README.md  RELEASING.md  RELIABILITY.md  RESEARCHER_GUIDE.md  RESOURCE_BUDGET.md  ROADMAP.md  SCENARIOS.md  (+25 more)
docs/architecture/: AI_INTEGRATION.md
docs/audit_v1.9.2/: lens_01_biology_stress.md  lens_02_humanities_stress.md  lens_03_qualitative_stress.md  lens_04_tool_protocol_consistency.md  lens_05_protocol_graph.md  lens_06_docs_accuracy.md  lens_07_config_schema.md  lens_08_test_coverage.md  lens_09_dead_code.md  lens_10_audit_gates.md
docs/tutorials/: EXAMPLE_WALKTHROUGH.md
docs/usability_v1.9.4/: scenario_1_biology_rnaseq.md  scenario_1_biology_rnaseq_rerun.md  scenario_2_humanities_close_reading.md  scenario_2_humanities_close_reading_rerun.md  scenario_3_qualitative_interviews.md  scenario_3_qualitative_interviews_rerun.md  scenario_4_engineering_benchmark.md  scenario_5_theory_math_proof.md  scenario_5_theory_math_proof_rerun.md
docs/v21_handoff/: PHASE_13_SCHEMA.md  PHASE_15_MINI_REVALIDATION.md  PHASE_1_RENAMES.md  PHASE_2_ENVELOPE_AUDIT.md  PHASE_3_ERROR_AUDIT.md  PHASE_8_GATE_FIRING_MATRIX.md  PROGRESS.md  V21_MASTER_PLAN.md  state_phase0_1780755971.txt
docs/v2_handoff/: CHANGELOG_v2_SCAFFOLD.diff  MIGRATION_v1_to_v2_SCAFFOLD.md  PHASE_10_PLAN.md  PHASE_10_WORKFLOW.mjs  PHASE_13_FOLLOWUPS.md  PHASE_14_PLAN.md  PHASE_14_WORKFLOW.mjs  PHASE_15B_WORKFLOW.mjs  PHASE_16_FINAL_REPORT.md  PHASE_16_PLAN.md  PHASE_16_WORKFLOW.mjs  PHASE_9_PLAN.md  PHASE_9_WORKFLOW.mjs  PLAN.md  V2_MIGRATION_TABLE_SCAFFOLD.md  V2_RELEASE_NOTES_SCAFFOLD.md  _started.txt  baseline_state.txt  never_called_candidates.json  wave_1_results.json
docs/v4/: DAEMON_BRIDGE.md  DESIGN_V4.md  NOTIFICATION_SPINE.md  PRECONDITION_GATE.md  RESOURCE_BUDGET.md  ROADMAP.md  STALENESS_GATE.md  UNSKIPPABLE_GATES.md
environment/: setup.sh
inputs/: intake.json  intake.yaml
scripts/: _preflight_figures_for_paper.py  backfill_tiers.py  build_embeddings.py  build_gate_meta.py  build_precondition_meta.py  lint_coherence.py  lint_no_version_chatter.py  preflight.py  regen_protocols_doc.py  synthesize_baseline.py
src/research_copilot/: chat.py  cli.py  engine.py  intent_router.py  project_ops.py
src/research_os/: __init__.py  cli.py  cli_doctor.py  collab.py  config.py  consolidation_registry.py  errors.py  hermes_integration.py  logo.py  models.py  project_ops.py  server.py  tui.py  verify.py  wizard.py
src/research_os_adapter_cytoscape/: __init__.py
src/research_os_adapter_mlflow/: __init__.py
src/research_os_adapter_nextflow/: __init__.py
src/research_os_adapter_redcap/: __init__.py
src/research_os_adapter_slurm/: __init__.py
src/research_os_adapter_snakemake/: __init__.py
src/research_os_adapter_synapse/: __init__.py
src/research_os_adapter_zenodo/: __init__.py
src/research_os_engineering/: __init__.py  detector.py  router_entries.py  tools.py
src/research_os_humanities/: __init__.py  detector.py  router_entries.py  tools.py
src/research_os_qualitative/: __init__.py  detector.py  router_entries.py  tools.py
src/research_os_theory_math/: __init__.py  detector.py  router_entries.py  tools.py
src/research_os_wet_lab/: __init__.py  detector.py  router_entries.py  tools.py
templates/: .continuerules  .windsurfrules  AGENTS.md  CLAUDE.md  researcher_config.yaml  step_summary.yaml.template
templates/checklists/: coreq_32items.yaml  srqr_21items.yaml
templates/configs/: economic_panel.yaml  epidemiology_observational.yaml  genomics.yaml  nlp_benchmark.yaml  rct_config.yaml
templates/qualitative/: pii_policy.md
templates/typst/: acl.typ  cell.typ  chicago_thesis.typ  common.typ  generic_thesis.typ  generic_two_column.typ  humanities_essay.typ  ieee_conf.typ  nature.typ  nejm.typ  neurips.typ  plos.typ  science.typ
tests/: conftest.py  test_actions.py  test_core.py  test_executors.py  test_init.py
tests/integration/: test_all_protocols_load.py  test_docs_referenced_scripts.py  test_full_workflow.py  test_init.py  test_paper_drafter_loop.py  test_pipeline.py  test_reorganized_imports.py  test_typst_no_font_warning.py
tests/tools/: test_audit_citation_resolution.py  test_build_tools.py  test_citations.py  test_context_intake.py  test_explain_and_chooser.py  test_intake.py  test_iteration.py  test_override_audit.py  test_planning.py  test_preregistration_and_dashboard_tests.py  test_repair.py  test_router.py  test_semantic_routing.py  test_sensitivity_and_cluster.py  test_step_env_lock.py  test_step_pipeline.py  test_tasks.py  test_v1_5_0.py  test_v1_5_1.py  test_workflow_dag.py
tests/unit/: test_4_4_5_fixes.py  test_actions.py  test_adaptive_autonomy.py  test_agents_md_lean.py  test_ai_context_class.py  test_audit.py  test_audit_audit_claims.py  test_audit_audit_code_quality.py  test_audit_audit_code_quality_v2.py  test_audit_audit_completeness.py  test_audit_audit_completeness_v2.py  test_audit_audit_figure_coverage.py  (+206 more)
(+592 files in other folders)
